test/errors/equ1.input.asm

* = $801

irqline0 = 13
irqline0 = 52

    lda #0
